Fix for alignment with blog image
Fixed #712

--- a/catalog/view/theme/default/stylesheet/blog.css
+++ b/catalog/view/theme/default/stylesheet/blog.css
@@ -11,6 +11,10 @@
     margin-right: 10px;
 }
 
+.ar-blog-cat-item .intro > *:first-child {
+    margin-top: -5px;
+}
+
 .blog-slide {
     margin-bottom: 50px !important;
 }
